# AskDocs

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: qdrant.py
backend/app/model_handlers/: chat_session_documents_handler.py
backend/ops/: Dockerfile
frontend/src/components/chat/: ChatInput.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx
frontend/src/types/: index.ts
ops/: docker-compose.yaml
